[package]
name = "nucleum"
version = "0.1.0"
authors = ["Jakub Trnka"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.31"
futures = "0.3.5"
structopt = "0.3.15"
thiserror = "1.0.20"
tokio = {version = "0.2", features = ["full"]}
tracing = "0.1.15"
tracing-futures = "0.2.4"
tracing-subscriber = "0.2.7"
